--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  height: auto;
   font-family: Arial, Helvetica, sans-serif;
   color: var(--tg-theme-text-color, #000000);
   background-color: var(--tg-theme-bg-color, #ffffff);
