--- a/public/style.css
+++ b/public/style.css
@@ -46,6 +46,7 @@ p {
 button {
   width: 100%;
   font-size: 16px;
+  font-weight: 400;
   line-height: 20px;
   color: #ffffff;
   background: linear-gradient(45deg, #6963de, #e64373);
