--- a/public/style.css
+++ b/public/style.css
@@ -50,12 +50,6 @@ a {
 }
 
 .checkbox-label {
-  display: flex;
-  gap: 16px;
-}
-
-/* Стилизация всей метки и области вокруг чекбокса */
-.checkbox-label {
   position: relative;
   padding-left: 35px;
   cursor: pointer;
@@ -64,13 +58,11 @@ a {
   user-select: none;
 }
 
-/* Скрываем стандартный чекбокс */
 .checkbox-label input[type="checkbox"] {
   visibility: hidden;
   position: absolute;
 }
 
-/* Создаем кастомный чекбокс */
 .checkbox-label .checkbox-box {
   position: absolute;
   top: 0;
@@ -78,34 +70,29 @@ a {
   height: 20px;
   width: 20px;
   background-color: var(--tg-theme-bg-color, #ffffff);
-  border: 1px solid #ddd;
   border-radius: 8px;
 }
 
-/* Стиль для чекбокса, когда он активирован (checked) */
 .checkbox-label input:checked ~ .checkbox-box {
   background: linear-gradient(45deg, #6963de, #e64373);
 }
 
-/* Добавляем галочку (когда чекбокс выбран) */
 .checkbox-label input:checked ~ .checkbox-box:after {
   content: "";
   position: absolute;
   display: block;
 }
 
-/* Стиль галочки */
 .checkbox-label .checkbox-box:after {
   left: 6px;
   top: 2px;
   width: 5px;
   height: 10px;
-  border: solid white;
+  border: solid var(--tg-theme-bg-color, #ffffff);
   border-radius: 2px;
   border-width: 0 3px 3px 0;
   transform: rotate(45deg);
 }
-
 
 button {
   width: 100%;
