--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,7 @@ a {
   gap: 12px;
 }
 
-.form-wrapper input {
+.form-wrapper input:not([type="checkbox"]) {
   font-size: 16px;
   line-height: 16px;
   color: var(--tg-theme-text-color, #000000);
@@ -61,6 +61,11 @@ a {
 .checkbox-label input[type="checkbox"] {
   visibility: hidden;
   position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 0;
+  left: 0;
+  opacity: 0;
 }
 
 .checkbox-label .checkbox-box {
@@ -71,6 +76,7 @@ a {
   width: 20px;
   background-color: var(--tg-theme-bg-color, #ffffff);
   border-radius: 8px;
+  margin-top: 2px;
 }
 
 .checkbox-label input:checked ~ .checkbox-box {
